--- a/src/apps/backend/modules/release/config/generator.yml
+++ b/src/apps/backend/modules/release/config/generator.yml
@@ -31,12 +31,12 @@ generator:
           help: Le prix de la release en euros
         is_available:
           label: La release est-elle encore disponible ?
-          help: Décocher cette case si la release est épuisée 
+          help: Décocher cette case si la release est épuisée
         links_carousel:
           label : Liens carousel
           help: Un lien par ligne
       list:
-        display: [=sku, title, artist, released_at]
+        display: [=sku, title, artist, artwork_artist, released_at]
       filter:  ~
       form:    ~
       edit:    ~
