--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -73,7 +73,7 @@ Artist:
       en:
         presentation: |
           French composer, mixing chip-instruments with modern sounds. His music is intense and varied, mostly dance-oriented, hard and melodic.
-          Active members since 2002 of the Paris Hq micromusic he helped to develop the chiptune & low fi electro scene in France by organising concerts and inviting artists who never had the chance to play in Paris. That’s during these shows that he started his first gigs under the pseudo Computer Truck… 
+          Active members since 2002 of the Paris Hq micromusic he helped to develop the chiptune & low fi electro scene in France by organising concerts and inviting artists who never had the chance to play in Paris. That’s during these shows that he started his first gigs under the pseudo Computer Truck…
           During the same period he was introduced to circuit bending and started using bended toys & synth for his music.
           His influence are varied, from retro electropop to breakcore and harsh noize. He describe his music by “riot toy party music”, a music you can dance on and wich evolve to the 80’s c64 sound to “ultime electrogrind music” (which you can only listen during the gigs because his more violent tracks have not yet been released so don’t search on his myspace or webpage…) with uncomprehensible voice on it thanks to his Halloween special fx voice transformer. A music made to unite retarded nerds and crustyPunx.
           ps : laptop plus diverse transformed toyz and voice...
@@ -171,9 +171,9 @@ Artist:
     Translation:
       fr:
         presentation: |
-          Mini Roc, de son vrai nom Jan MichelBack est un musicien allemand faisant de la musique éléctro. 
+          Mini Roc, de son vrai nom Jan MichelBack est un musicien allemand faisant de la musique éléctro.
           Il a expérimenté différentes sonorités et styles musicaux pendant sept ans avant de découvrir la scène 8bit, en 2003.
-          Très vite, il tombe amoureux des sons lo-fi générés par les jeux vidéos des anciennes consoles, imprésionné par la simplicité technique développée par les morceaux 8bit. 
+          Très vite, il tombe amoureux des sons lo-fi générés par les jeux vidéos des anciennes consoles, imprésionné par la simplicité technique développée par les morceaux 8bit.
           Il commence alors très rapidement à produire son propre panel de sons, provenants de jeux mélangés à des sonoritées modernes de l'électro et des brides de techno.
           En 2005 , Mini Roc produit des morceaux exclusivement joués sur Gameboy et les à joués en live à travers toute l'Europe.
       en:
@@ -223,8 +223,8 @@ Artist:
           De compilations en maxis il continue ensuite à produire sa musique en dilettante, ce qui ne l'empêche pas de proposer à ses idoles électroniques de remixer un de ses morceaux. C'est ainsi que Felix Kubin, Candie Hank, Brezel Goering (Stereototal), Frederik Schikowski, Groupgris (Kap Bambino) et Gangpol participent au projet : le disque sort en 2009 sous forme de picture disc chez The Brain Records, label créé pour l'occasion. A noter que The Brain est aussi une émission de radio qu'il anime et produit avec sa compagne Eva Lebrain depuis 1999, avec laquelle il organise aussi à Nantes des soirées concerts + party baptisées Superboums.
       en:
         presentation: |
-          After being a new wave drummer in the 80s, Pascal Lebrain became Puyo Puyo around 2002. 
-          It was the computer and the program Protools Free that allowed him to create a slightly devious and crazy lo-fi electropop music, home made with little material, but much enthusiasm. 
+          After being a new wave drummer in the 80s, Pascal Lebrain became Puyo Puyo around 2002.
+          It was the computer and the program Protools Free that allowed him to create a slightly devious and crazy lo-fi electropop music, home made with little material, but much enthusiasm.
           First good news: Feliz Kubin took him on his label Gagarin Records for a maxi vinyl entitled "A novel Trick Item" in 2004.. He then started a series of concerts throughout Europe - and even in Mexico - dancing the Puyo Puyo in video clips he put together himself in the same ludic and low-budjet spirit as always. This mutant karaoke, both fragile and energetic, became is trademark, along with his famous cosmodroid helmet.
           From compilations to maxis, he went on producing his music, but still asked his electronic idols to remix one of his pieces. This is how Felix Kubin, Candie Hank, Brezel Goering (Stereototal), Frederik Schikowski, Groupgris (Kap Bambino) and Gangpol got started on the project: the album came out in 2009 as a picture disc under Brain Records, a label created for the occasion. The Brain is also a radio show hosted and produced by Lebrain and his partner Eva Lebrain since 1999, with whom he also organizes evening concerts and parties in Nantes called "Superboums".
 
@@ -317,10 +317,10 @@ Artist:
     Translation:
       fr:
         presentation: |
-          Xerak est un artiste musicien et graphiste, créateur du mouvement electro trash kawaii. 
+          Xerak est un artiste musicien et graphiste, créateur du mouvement electro trash kawaii.
           Il puise son inspiration dans l'univers de la bande dessinée americaine et japonaise, du pixel art, du pop art, ainsi que dans l'esthétique des films de science fiction du milieu du siècle.
           Sa musique c’est un mélange électro acid punk toy kawaii inspiré d’un soupçon de techno japonaise du début des années 90 (Denki groove, Pierre Taki…).
-          Son graphisme est omniprésent dans ses lives et habille ses créations sonores sous forme de vidéo clips en dessins animés ou sous forme de jeux vidéo que l'on peut découvrir sur son site. 
+          Son graphisme est omniprésent dans ses lives et habille ses créations sonores sous forme de vidéo clips en dessins animés ou sous forme de jeux vidéo que l'on peut découvrir sur son site.
           Son travail est accompagné de shows musicaux, graphiques et énergiques où il incarne différents personnages plus extravagants les uns que les autres (Le Caniche Punk Rose Delux, le prêcheur du Sexfloor, Le Président Mutant, Le Pâtissier Mutant…).
         presentation: |
           XERAK is a designer and a musician creator of the electro trash kawaii mouvement. His universe comes from the Japanese comics the American comics the Pxl Art the Pop art and the science fiction movies of the 50’s.
@@ -354,11 +354,51 @@ Artist:
       fr:
         presentation: |
           Venus tous deux d'une étoile lointaine à bord d'un vaisseau interplanétaire,  Rod Droïd et Puyo Puyo s'apprêtaient à faire une tournée galactique triomphale au sein de l'orchestre impérial. Soudain, leur engin spatial explosa en vol dans une averse de météores. Précipités dans la stratosphère, nos deux compères robots furent alors projetés sur terre et plus précisément à Nantes, France. Ayant pris l'apparence humaine, ils se remirent illico à faire la seule chose qu'ils savaient faire : de la musique et des concerts, pour survivre dans cet environnement hostile, à des milliers d'années-lumière de chez eux. Les Robots Musique étaient nés.
-          Leur duo rappelle naturellement le folklore Kriktoïen, en plus offensif du point de vue rythmique. Leurs textes sont simples (n'oublions pas que ce sont des robots) et légers comme les poèmes Hwagaagaa de leur enfance. Quant à leur sens de la mélodie, il évoque immanquablement les airs entraînants de Gamma Leonis et de Celestia, deux astres célèbres pour leurs happy tunes. Leurs morceaux sont courts, efficaces et parfaits pour les folles chorégraphies métalliques.  
+          Leur duo rappelle naturellement le folklore Kriktoïen, en plus offensif du point de vue rythmique. Leurs textes sont simples (n'oublions pas que ce sont des robots) et légers comme les poèmes Hwagaagaa de leur enfance. Quant à leur sens de la mélodie, il évoque immanquablement les airs entraînants de Gamma Leonis et de Celestia, deux astres célèbres pour leurs happy tunes. Leurs morceaux sont courts, efficaces et parfaits pour les folles chorégraphies métalliques.
           Voici quelques mois, Da! Heard it records, toujours en quête de nouveaux talents, eut vent de ce duo droïdesque et décida de le signer sur son label digital. Comme ils ne savaient pas signer, les Robots Musique firent simplement coucou avec la main.
       en:
         presentation: |
           Being edited currently. Come back soon !
+
+ArtworkArtist:
+  nazzilla:
+    id: 1
+    name: Nazzilla
+    more: |
+      <ul>
+        <li><a href="http://www.nazzilla.com/">www.nazzilla.com</a></li>
+      <ul>
+    Translation:
+      fr:
+        presentation: |
+          NAZZILLA FR
+      en:
+        presentation: |
+          NAZZILLA EN
+
+  satanikmike:
+    id: 2
+    name: Satanik Mike
+    more: ~
+    Translation:
+      fr:
+        presentation: |
+          SATANIK MIKE FR
+      en:
+        presentation: |
+          SATANIK MIKE EN
+
+  stereotype:
+    id: 3
+    name: Stereotype
+    more: ~
+    Translation:
+      fr:
+        presentation: |
+          STEREOTYPE FR
+      en:
+        presentation: |
+          STEREOTYPE EN
 
 Release:
   dhr01:
@@ -605,19 +645,19 @@ Release:
     Translation:
       fr:
         presentation: |
-          Residue est le premier album du duo suisse Pocketmaster. 
+          Residue est le premier album du duo suisse Pocketmaster.
           Apres le festif EP Tin Guerilla (2008/auto-produit), le duo formé par Cube-C et Emiglio Laser quitte les bancs de l'auto-production pour sortir son premier album signé sur un label.
-          Habitué des manipulations lowtech et samples de vieilles puces, jouets ou sources variées, Pocketmaster a choisi cette fois de nous surprendre et de conserver le son brut des carte son, sans manipulations. Une certaine image – radicale – de la pureté ! 
+          Habitué des manipulations lowtech et samples de vieilles puces, jouets ou sources variées, Pocketmaster a choisi cette fois de nous surprendre et de conserver le son brut des carte son, sans manipulations. Une certaine image – radicale – de la pureté !
           L'album est donc entièrement concocté à partir du duo de Game-boy et de Commodore 64, épicé par toutes sortes de samples et de quelques vieux synthétiseurs, le tout, enregistré en un temps record. Le résultat est un douze titres frais et joyeux, dans l'esprit des lives survitaminés du duo.
-          Les deux artistes n'hésitent cependant pas à faire dériver leurs morceaux dans plusieurs univers musicaux. En plus d'un titre remixé par Stu, et d'une reprise de Naomi Sample, Residue offre aux auditeurs une magnifique reprise du générique de la série "It Crowd". 
+          Les deux artistes n'hésitent cependant pas à faire dériver leurs morceaux dans plusieurs univers musicaux. En plus d'un titre remixé par Stu, et d'une reprise de Naomi Sample, Residue offre aux auditeurs une magnifique reprise du générique de la série "It Crowd".
           A l'opposé de son titre "Residue" qui signifie restes, ou reliques, ce premier disque est un album innovant, illustrant la volonté des deux farfelus de toujours se dépasser.
       en:
         presentation: |
-          Residue is Swiss duo Pocketmaster's first album. 
+          Residue is Swiss duo Pocketmaster's first album.
           After the festive EP Tin Guerilla (2008/self-produced), the Cube-C and Emiglio Laser duo abandons self-production to release its first label album.
-          Used to lowtech manipulations and samples from old chips, toys or other various sources, this time, Pocketmaster chose to surprise us by preserving the sound card's raw sound, without manipulation. A certain image-radical-purety! 
+          Used to lowtech manipulations and samples from old chips, toys or other various sources, this time, Pocketmaster chose to surprise us by preserving the sound card's raw sound, without manipulation. A certain image-radical-purety!
           The album is thus concocted entirely from the Game-boy and Commodore 64 duo, spiced up with all sorts of samples and a few old synthesizers, all recorded in a record time. The result is a twelve tracker, fresh and joyful, in the spirit of the duo's over-vitamin live performances.
-          Yet, the two artists don't hesitate to have their pieces drift through several musical universes. In addition to a track remixed my Stu, and a Naomi Sample cover, Residue offers the listeners a magnificent cover of the "It Crowd" series' credits. 
+          Yet, the two artists don't hesitate to have their pieces drift through several musical universes. In addition to a track remixed my Stu, and a Naomi Sample cover, Residue offers the listeners a magnificent cover of the "It Crowd" series' credits.
           Contrary to its title "Residue", which means leftover, or relics, this first album is innovative and illustrates the wacky duo's wish to always surpass themselves.
 
   dhr14:
@@ -684,6 +724,7 @@ Release:
     slug: dhr-16
     is_new: false
     Artist: buskerdroid
+    ArtworkArtist: nazzilla
     paypal_id: 5KQHBCVEZSTKY
     Translation:
       fr:
@@ -709,6 +750,7 @@ Release:
     slug: dhr-17
     is_new: true
     Artist: jacquescochise
+    ArtworkArtist: satanikmike
     paypal_id: JLTLFVP52F39G
     Translation:
       fr:
@@ -732,12 +774,13 @@ Release:
     slug: dhr-18
     is_new: true
     Artist: lesrobotsmusique
+    ArtworkArtist: stereotype
     paypal_id: X9CACU5AN79EQ
     Translation:
       fr:
         presentation: |
           Venus tous deux d'une étoile lointaine à bord d'un vaisseau interplanétaire,  Rod Droïd et Puyo Puyo s'apprêtaient à faire une tournée galactique triomphale au sein de l'orchestre impérial. Soudain, leur engin spatial explosa en vol dans une averse de météores. Précipités dans la stratosphère, nos deux compères robots furent alors projetés sur terre et plus précisément à Nantes, France. Ayant pris l'apparence humaine, ils se remirent illico à faire la seule chose qu'ils savaient faire : de la musique et des concerts, pour survivre dans cet environnement hostile, à des milliers d'années-lumière de chez eux. Les Robots Musique étaient nés.
-          Leur duo rappelle naturellement le folklore Kriktoïen, en plus offensif du point de vue rythmique. Leurs textes sont simples (n'oublions pas que ce sont des robots) et légers comme les poèmes Hwagaagaa de leur enfance. Quant à leur sens de la mélodie, il évoque immanquablement les airs entraînants de Gamma Leonis et de Celestia, deux astres célèbres pour leurs happy tunes. Leurs morceaux sont courts, efficaces et parfaits pour les folles chorégraphies métalliques.  
+          Leur duo rappelle naturellement le folklore Kriktoïen, en plus offensif du point de vue rythmique. Leurs textes sont simples (n'oublions pas que ce sont des robots) et légers comme les poèmes Hwagaagaa de leur enfance. Quant à leur sens de la mélodie, il évoque immanquablement les airs entraînants de Gamma Leonis et de Celestia, deux astres célèbres pour leurs happy tunes. Leurs morceaux sont courts, efficaces et parfaits pour les folles chorégraphies métalliques.
           Voici quelques mois, Da! Heard it records, toujours en quête de nouveaux talents, eut vent de ce duo droïdesque et décida de le signer sur son label digital. Comme ils ne savaient pas signer, les Robots Musique firent simplement coucou avec la main.
       en:
         presentation: |
@@ -812,9 +855,9 @@ Content:
           <a href="http://www.miniroc.com/">Mini Roc</a>,
           Momo Seb,
           <a href="http://valkiri.incongru.org">Valkiri</a>,
-          <a href="http://www.mobyone.net">Mobyone</a>, 
+          <a href="http://www.mobyone.net">Mobyone</a>,
           <a href="http://www.ilbm.info">Ilbm</a>
-          <a href="http://pastis-hosting.net">Pastis Hosting</a>, 
+          <a href="http://pastis-hosting.net">Pastis Hosting</a>,
           Ptite Gonze,
           <a href="http://puyopuyo.lautre.net/">Puyo Puyo</a>,
           <a href="http://www.pocketmaster.ch/">Pocketmaster</a>,
@@ -856,9 +899,9 @@ Content:
           <a href="http/www.miniroc.com">Mini Roc</a>,
           <a href="http://www.mixcloud.com/DjFulciSeleKtone/">Momo Seb</a>,
           <a href="http://valkiri.incongru.org">Valkiri</a>,
-          <a href="http://www.mobyone.net">Mobyone</a>, 
+          <a href="http://www.mobyone.net">Mobyone</a>,
           <a href="http://www.ilbm.info">Ilbm</a>,
-          <a href="http://pastis-hosting.net">Pastis Hosting</a>, 
+          <a href="http://pastis-hosting.net">Pastis Hosting</a>,
           Ptite Gonze,
           <a href="http://puyopuyo.lautre.net/">Puyo Puyo</a>,
           <a href="http://www.pocketmaster.ch/">Pocketmaster</a>,
@@ -881,7 +924,7 @@ Post:
       fr:
         title: D!HR est de retour !
         body: |
-         D!HR se met à l'heure d'été avec un nouveau site tout beau tout propre realisé par <a href="http://www.thibaulthuertas.com/">Thibault Huertas</a> en collaboration avec le bureau des Constructions Incongrues. Nous remercions infiniement Nazilla qui avait réalisé la premiere version du site, vous pouvez voir ses nouvelles compositions sur son site <a href="http://www.nazilla.com">www.nazilla.com</a>.  C'est aussi l'occasion de vous présenter la 18ème release du label : Plan 9 des Robots Musiques ;  duo de Rod Droïd et Puyo Puyo ! Cet album vous accompagnera parfaitement pendant votre visite du nouveau site. 
+         D!HR se met à l'heure d'été avec un nouveau site tout beau tout propre realisé par <a href="http://www.thibaulthuertas.com/">Thibault Huertas</a> en collaboration avec le bureau des Constructions Incongrues. Nous remercions infiniement Nazilla qui avait réalisé la premiere version du site, vous pouvez voir ses nouvelles compositions sur son site <a href="http://www.nazilla.com">www.nazilla.com</a>.  C'est aussi l'occasion de vous présenter la 18ème release du label : Plan 9 des Robots Musiques ;  duo de Rod Droïd et Puyo Puyo ! Cet album vous accompagnera parfaitement pendant votre visite du nouveau site.
       en:
         title: D!HR is back !
         body: |
