[deploy] dry run par défaut

--- a/etc/jeroboam/build.properties
+++ b/etc/jeroboam/build.properties
@@ -49,7 +49,7 @@ remote.path.root=/srv/bouteille_data/plesk-vhosts/daheardit-records.net/web_user
 remote.username=net_daheardit
 
 # rsync
-#rsync.options=--delete-after
+rsync.options=--delete-after --dry-run
 
 # symfony1
 #symfony1.cache.path=dirname(__FILE__).'/../cache'
