[deploy] déploiement vers pastis hosting

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "repositories": [
         {
-            "type": "composer",
-            "url": "http://constructions-incongrues.github.com/packages"
+            "type": "git",
+            "url": "git@github.com:constructions-incongrues/ananas-build-toolkit.git"
         }
     ],
     "require": {
-        "constructions-incongrues/ananas-build-toolkit": "0.12.0",
+        "constructions-incongrues/ananas-build-toolkit": "0.34.*",
         "symfony/finder": "2.6.*"
     }
 }
