--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -22,44 +22,24 @@ dhr.url.root=
 # feeds
 feeds.feedburner_enabled=
 
-# git
-#git.branch=master
-#git.executable=/usr/bin/git
-#git.remote=origin
-
 # mkdir
 mkdir=src/cache,src/log
 
-# php
-#php.executable=/usr/bin/php
-#php.ini.display_errors=true
-#php.ini.error_reporting=32767
-#php.review.branch=origin/master
-#php.review.build.url=http://localhost/${ant.project.name}/build
-#php.review.exclude=src/lib/*/doctrine/*/base/*.php
-#php.review.filter='^.*\.php$'
-#php.review.php-cs-fixer.additional_options=
-#php.review.php-cs-fixer.level=all
-#php.review.phpcs.additional_options=-n
-#php.review.phpcs.standard=PSR
+# properties
+#properties.dirs=src
 
 # remote
 #remote.host=
 #remote.path.root=
+#remote.port=22
 #remote.username=
 
 # rsync
-rsync.options=--delete-after
+rsync.options=--delete-after --dry-run
 
 # symfony1
-#symfony1.cache.path=dirname(__FILE__).'/../cache'
-#symfony1.executable=src/symfony
+symfony1.cache.path=
 symfony1.log.path=dirname(__FILE__).'/../log'
-#symfony1.version12=false
-#symfony1.version14=true
 
 # toolkit
-toolkit.modules=php,properties,filesystem,git,composer,symfony1,rsync2
-
-# vagrant
-vagrant.ip=
+toolkit.modules=filesystem,properties,rsync2,composer
