[deploy] Cloudflare purge

--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -7,6 +7,12 @@
 # chmod
 chmod.777=src/cache,src/log
 
+# cloudflare
+#cloudflare.authEmail=
+#cloudflare.authKey=
+#cloudflare.endpoint=https://api.cloudflare.com/client/v4
+#cloudflare.zoneId=
+
 # composer
 #composer.executable=composer.phar
 
