--- a/etc/pastishosting-preview/build.properties
+++ b/etc/pastishosting-preview/build.properties
@@ -8,10 +8,10 @@
 #chmod.777=src/cache,src/log
 
 # cloudflare
-#cloudflare.authEmail=
-#cloudflare.authKey=
+cloudflare.authEmail=bertier@constructions-incongrues.net
+cloudflare.authKey=5787ee7fb7aff141dc8a16ca1fdbe9b7805d8
 #cloudflare.endpoint=https://api.cloudflare.com/client/v4
-#cloudflare.zoneId=
+cloudflare.zoneId=70c3bb8d8739e987e8eb9327850fbe62
 
 # composer
 #composer.executable=composer.phar
@@ -23,10 +23,10 @@ database.main.password=daheardit-reco
 database.main.username=daheardit-record
 
 # dhr
-dhr.url.root=http://www.daheardit-records.net
+dhr.url.root=http://preview.daheardit-records.net
 
 # feeds
-feeds.feedburner_enabled=true
+#feeds.feedburner_enabled=
 
 # mkdir
 #mkdir=src/cache,src/log
@@ -36,7 +36,7 @@ feeds.feedburner_enabled=true
 
 # remote
 remote.host=docker01.pastis-hosting.net
-remote.path.root=/var/www/vhosts/daheardit-records.net/httpdocs/
+remote.path.root=/var/www/vhosts/daheardit-records.net/preview.daheardit-records.net
 remote.port=2222
 remote.username=daheardit-record
 
@@ -44,7 +44,7 @@ remote.username=daheardit-record
 #rsync.options=--delete-after --dry-run
 
 # symfony1
-#symfony1.cache.path=dirname(__FILE__).'/../cache'
+#symfony1.cache.path=
 #symfony1.log.path=dirname(__FILE__).'/../log'
 
 # toolkit
