[deploy] Cloudflare purge

--- a/etc/pastishosting/build.properties
+++ b/etc/pastishosting/build.properties
@@ -7,6 +7,12 @@
 # chmod
 #chmod.777=src/cache,src/log
 
+# cloudflare
+#cloudflare.authEmail=
+#cloudflare.authKey=
+#cloudflare.endpoint=https://api.cloudflare.com/client/v4
+#cloudflare.zoneId=
+
 # composer
 #composer.executable=composer.phar
 
@@ -42,4 +48,4 @@ remote.username=daheardit-record
 #symfony1.log.path=dirname(__FILE__).'/../log'
 
 # toolkit
-#toolkit.modules=filesystem,properties,rsync2,composer
+toolkit.modules=filesystem,properties,rsync2,composer,cloudflare
