--- a/etc/pastishosting-preview/build.properties
+++ b/etc/pastishosting-preview/build.properties
@@ -7,6 +7,12 @@
 # chmod
 #chmod.777=src/cache,src/log
 
+# cloudflare
+cloudflare.authEmail=bertier@constructions-incongrues.net
+cloudflare.authKey=5787ee7fb7aff141dc8a16ca1fdbe9b7805d8
+#cloudflare.endpoint=https://api.cloudflare.com/client/v4
+cloudflare.zoneId=70c3bb8d8739e987e8eb9327850fbe62
+
 # composer
 #composer.executable=composer.phar
 
@@ -42,4 +48,4 @@ remote.username=daheardit-record
 #symfony1.log.path=dirname(__FILE__).'/../log'
 
 # toolkit
-#toolkit.modules=filesystem,properties,rsync2,composer
+toolkit.modules=filesystem,properties,rsync2,composer,cloudflare
