--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -10,6 +10,20 @@ sfGuardUser:
     email_address:  bozoorak@gmail.com
     is_super_admin: true
 
+Post:
+  post1:
+    created_at: "2012-07-05 00:00:00"
+    image: 1.jpg
+    Translation:
+      fr:
+        title: D!HR est de retour !
+        body: |
+         D!HR se met à l'heure d'été avec un nouveau site tout beau tout propre realisé par <a href="http://www.thibaulthuertas.com/">Thibault Huertas</a> en collaboration avec le bureau des Constructions Incongrues. Nous remercions infiniement Nazilla qui avait réalisé la premiere version du site, vous pouvez voir ses nouvelles compositions sur son site <a href="http://www.nazilla.com">www.nazilla.com</a>.  C'est aussi l'occasion de vous présenter la 18ème release du label : Plan 9 des Robots Musiques ;  duo de Rod Droïd et Puyo Puyo ! Cet album vous accompagnera parfaitement pendant votre visite du nouveau site. 
+      en:
+        title: D!HR is back !
+        body: |
+          D!HR is ready for the summer with a brand-spanking-new site created by <a href="http://www.thibaulthuertas.com/">Thibault Huertas</a> in collaboration with Constructions Incongrues. We give great thanks to Nazilla who designed the first version of the site. You can see Nazilla's new compositions on their site <a href="http://www.nazilla.com">www.nazilla.com</a>. This is also a great opportunity to introduce the label's 18th release: Plan 9 des Robots Musiques (Plan 9 of the Music Robots), a Rod Droïd and Puyo Puyo duo! This album will make for a great accompaniment as you browse through our new site.
+
 Artist:
   benetbene:
     id: 1
@@ -449,7 +463,7 @@ ArtworkArtist:
           Graphiste7 EN
 
   graphiste8:
-    id: 6
+    id: 8
     name: Graphiste8
     more: ~
     Translation:
@@ -472,7 +486,7 @@ Release:
     links_press: |
       http://www.radiofrance.fr/chaines/france-culture2/emissions_ete/tentatives/fiche.php?diffusion_id=52425
       http://www.thefrenchtouch.org/tft/objet.php?objet=1752&session_tft_new=8ebe7f7077c450c635d99499373d69d0
-      http://gratisvibes.com/post/2-step-8-bit/
+      http://gratisvibes.com/post-production/2-step-8-bit/
     Translation:
       fr:
         presentation: |
