--- a/etc/pastishosting-preview/build.properties
+++ b/etc/pastishosting-preview/build.properties
@@ -44,7 +44,7 @@ remote.username=daheardit-record
 #rsync.options=--delete-after --dry-run
 
 # symfony1
-#symfony1.cache.path=
+#symfony1.cache.path=dirname(__FILE__).'/../cache'
 #symfony1.log.path=dirname(__FILE__).'/../log'
 
 # toolkit
