[release] Regroupement des clips

--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -483,6 +483,10 @@ Release:
     Artist: computertruck
     paypal_id: 5AZL7SJHW9DTG
     is_available: false
+    links_carousel: |
+      http://vimeo.com/channels/dahearditrecords/5998420
+      https://www.youtube.com/watch?v=dOJwGl3yLMU
+      http://computertruck.parishq.net
     links_press: |
       http://www.radiofrance.fr/chaines/france-culture2/emissions_ete/tentatives/fiche.php?diffusion_id=52425
       http://www.thefrenchtouch.org/tft/objet.php?objet=1752&session_tft_new=8ebe7f7077c450c635d99499373d69d0
