[player] player Facebook *DE LUXE*

--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -38,7 +38,7 @@ mkdir=src/cache,src/log
 rsync.options=--delete-after --dry-run
 
 # symfony1
-symfony1.cache.path=
+symfony1.cache.path=dirname(__FILE__).'/../cache'
 symfony1.log.path=dirname(__FILE__).'/../log'
 
 # toolkit
