[doc/deploy] simplifications

--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -13,9 +13,6 @@ chmod.777=src/cache,src/log
 #cloudflare.endpoint=https://api.cloudflare.com/client/v4
 #cloudflare.zoneId=
 
-# composer
-#composer.executable=composer.phar
-
 # database
 database.main.hostname=
 database.main.name=
@@ -26,7 +23,7 @@ database.main.username=
 dhr.url.root=
 
 # feeds
-feeds.feedburner_enabled=
+feeds.feedburner_enabled=false
 
 # mkdir
 mkdir=src/cache,src/log
@@ -48,4 +45,4 @@ symfony1.cache.path=dirname(__FILE__).'/../cache'
 symfony1.log.path=dirname(__FILE__).'/../log'
 
 # toolkit
-toolkit.modules=filesystem,properties,rsync2,composer
+toolkit.modules=filesystem,properties,rsync2
