--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,16 @@
 	<!-- Initialize toolkit -->
 	<import file="vendor/constructions-incongrues/ananas-build-toolkit/modules/toolkit/module.xml" />
 
-    <target name="deploy-to">
+    <target name="deploy-to" depends="deploy-sources, invalidate-cache-pastishosting, invalidate-cache-pastishosting-preview, cloudflare.purgeAll">
+        <condition property="do.preview">
+            <equals arg1="${profile}" arg2="pastishosting-preview" />
+        </condition>
+        <condition property="do.production">
+            <equals arg1="${profile}" arg2="pastishosting" />
+        </condition>
+    </target>
+
+    <target name="deploy-sources">
         <!-- Simulation du déploiement -->
         <echo>Simulation du déploiement</echo>
         <antcall target="deploy">
@@ -26,15 +35,29 @@
         <antcall target="deploy">
             <param name="rsync.options" value="--delete-after" />
         </antcall>
+    </target>
 
+    <target name="invalidate-cache-pastishosting" if="${do.production}">
         <!-- Invalidation du cache Symfony -->
         <echo>Invalidation du cache Symfony</echo>
         <exec executable="ssh">
             <arg line="-p 2222 daheardit-record@docker01.pastis-hosting.net /var/www/vhosts/daheardit-records.net/httpdocs/src/symfony cache:clear" />
         </exec>
+    </target>
 
-        <!-- Invalidation du cache Cloudflare -->
-        <echo>Invalidation du cache Cloudflare</echo>
-        <antcall target="cloudflare.purgeAll" />
+    <target name="invalidate-cache-pastishosting-preview" if="${do.preview}">
+        <!-- Invalidation du cache Symfony -->
+        <echo>Invalidation du cache Symfony</echo>
+        <exec executable="ssh">
+            <arg line="-p 2222 daheardit-record@docker01.pastis-hosting.net /var/www/vhosts/daheardit-records.net/preview.daheardit-records.net/src/symfony cache:clear" />
+        </exec>
+    </target>
+
+    <target name="install">
+        <!-- Installation de l'environnement virtualisé -->
+        <exec executable="sudo">
+            <arg line="apt -y install dnsmasq resolvconf virtualbox" />
+        </exec>
+        <get src="https://dl.bintray.com/mitchellh/vagrant/vagrant_1.8.6_x86_64.deb" dest="/tmp/vagrant_1.8.6_x86_64.deb"/>
     </target>
 </project>
