fix ant configure

--- a/etc/common/build.properties
+++ b/etc/common/build.properties
@@ -45,4 +45,4 @@ symfony1.cache.path=dirname(__FILE__).'/../cache'
 symfony1.log.path=dirname(__FILE__).'/../log'
 
 # toolkit
-toolkit.modules=filesystem,properties,rsync2
+toolkit.modules=filesystem,properties,rsync2,cloudflare
