[release] url de header customisable
Signed-off-by: Tristan Rivoallan <tristan@rivoallan.net>

--- a/src/apps/backend/modules/release/config/generator.yml
+++ b/src/apps/backend/modules/release/config/generator.yml
@@ -35,6 +35,9 @@ generator:
         links_carousel:
           label : Liens carousel
           help: Un lien par ligne
+        url_header:
+          label : URL du header
+          help: Lien vers lequel pointera le header
       list:
         display: [=sku, title, artist, artwork_artist, released_at]
       filter:  ~
