[debt] Cleanup de profils de configurations inutiles

--- a/etc/developer-portal/build.properties
+++ b/etc/developer-portal/build.properties
@@ -14,8 +14,8 @@
 #cloudflare.zoneId=
 
 # database
-database.main.hostname=dhr_mysql
-database.main.name=dhr
+database.main.hostname=daheardit_mysql
+database.main.name=daheardit
 database.main.password=root
 database.main.username=root
 
