--- a/etc/pastishosting/build.properties
+++ b/etc/pastishosting/build.properties
@@ -32,9 +32,9 @@ feeds.feedburner_enabled=true
 #properties.dirs=src
 
 # remote
-remote.host=docker01.pastis-hosting.net
+remote.host=ftp.pastis-hosting.net
 remote.path.root=/var/www/vhosts/daheardit-records.net/httpdocs/
-remote.port=2222
+#remote.port=22
 remote.username=daheardit-record
 
 # rsync
