--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
     depends_on:
       - db
     image: adminer
+    labels:
+        traefik.frontend.rule: "Host:adminer.daheardit.localhost"
+        traefik.port: "8080"
     restart: always
-    ports:
-      - 8080:8080
 
   db:
     environment:
@@ -17,20 +18,25 @@ services:
     volumes:
       - ./src/data/fixtures/net_dahearditrecords_www.dump.sql:/docker-entrypoint-initdb.d/daheardit.sql
 
-  nginx:
-    depends_on: 
-      - php
-    image: nginx:1.15-alpine
-    ports:
-      - 8081:80
-    volumes:
-      - ./etc/docker/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./src/web:/usr/local/src/app/src/web
-
   php:
     build: .
+    command: ["php", "-S", "0.0.0.0:8000", "-t", "web"]
     depends_on:
       - db
-    image: constructionsincongrues/daheardit-php
+    image: constructionsincongrues/dahearditrecords
+    labels:
+      traefik.frontend.rule: "Host:daheardit.localhost"
+      traefik.port: "8000"
     volumes:
-      - ./src:/usr/local/src/app/src
+      - ./src:/usr/local/src
+
+  traefik:
+    command: --api --docker
+    image: traefik:1.7
+    labels:
+      traefik.frontend.rule: "Host:traefik.daheardit.localhost"
+      traefik.port: "8080"
+    ports:
+      - 80:80
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
