--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,29 @@ services:
       MYSQL_ROOT_PASSWORD: root
     image: mysql:5.6
     volumes:
-      - ./src/data/fixtures/net_dahearditrecords_www.dump.sql:/docker-entrypoint-initdb.d/daheardit.sql
+      - ./var/db:/var/lib/mysql
+      - ./src/data/fixtures/daheardit.sql:/docker-entrypoint-initdb.d/00_daheardit.sql
+      - ./src/data/fixtures/drop_foreign_keys.sql:/docker-entrypoint-initdb.d/01_drop_foreign_keys.sql
+      - ./src/data/fixtures/update_translation_tables.sql:/docker-entrypoint-initdb.d/02_update_translation_tables.sql
+
+  directus:
+    image: directus/api:2.0.18
+    depends_on:
+      - db
+    environment:
+      DATABASE_HOST: db
+      DATABASE_NAME: "daheardit"
+      DATABASE_USERNAME: "root"
+      DATABASE_PASSWORD: "root"
+      ADMIN_EMAIL: "admin@daheardit.localhost"
+      ADMIN_PASSWORD: "admin"
+    labels:
+      traefik.frontend.rule: "Host:directus.daheardit.localhost"
+      traefik.port: "80"
 
   php:
     build: .
-    command: ["php", "-S", "0.0.0.0:8000", "-t", "web"]
+    command: ["/bin/sh", "-c", "make configure && php -S 0.0.0.0:8000 -t web"]
     depends_on:
       - db
     image: constructionsincongrues/dahearditrecords
@@ -29,6 +47,7 @@ services:
       traefik.port: "8000"
     volumes:
       - ./src:/usr/local/src
+      - ./etc/${PROFILE-daheardit.localhost}/.env:/usr/local/src/.env
 
   traefik:
     command: --api --docker
@@ -38,5 +57,9 @@ services:
       traefik.port: "8080"
     ports:
       - 80:80
+    networks:
+      default:
+        aliases:
+          - daheardit.localhost
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
