[make] Implémentation d'une règle "deploy"

--- a/etc/www.daheardit-records.net/.env
+++ b/etc/www.daheardit-records.net/.env
@@ -11,4 +11,5 @@ RSYNC_SSH_PORT=22
 RSYNC_LOCAL_PATH=./src
 RSYNC_REMOTE_USER=daheardit-record
 RSYNC_REMOTE_HOST=ftp.pastis-hosting.net
-RSYNC_REMOTE_PATH=/var/www/vhosts/daheardit-records.net/httpdocs/src
+RSYNC_REMOTE_PATH=/var/www/vhosts/daheardit-records.net/httpdocs/
+RSYNC_PARAMETERS=--dry-run
