--- a/src/apps/frontend/config/routing.yml
+++ b/src/apps/frontend/config/routing.yml
@@ -43,6 +43,12 @@ release_show:
   requirements:
     sf_culture: (?:fr|en)
 
+release_press:
+  url:   /:sf_culture/discography/:slug/press
+  param: { module: release, action: press }
+  requirements:
+    sf_culture: (?:fr|en)
+
 release_track_show:
   url:   /:sf_culture/discography/:slug/:number
   param: { module: release, action: showTrack }
