[front] Meilleure gestion de l'invalidation du cache des assets

--- a/etc/www.daheardit-records.net/.env
+++ b/etc/www.daheardit-records.net/.env
@@ -1,3 +1,4 @@
+APP_VERSION=20190326.1
 API_URL_ROOT=api.daheardit-records.net
 CLOUDFLARE_EMAIL=bertier@constructions-incongrues.net
 CLOUDFLARE_KEY=5787ee7fb7aff141dc8a16ca1fdbe9b7805d8
