--- a/src/apps/frontend/config/routing.yml
+++ b/src/apps/frontend/config/routing.yml
@@ -47,10 +47,18 @@ release_track_show:
 
 # radio
 radio:
-  url: /radio
+  url: /:sf_culture/radio
   param: { module: radio, action: index }
+  requirements:
+    sf_culture: (?:fr|en)
 
 # homepage
+homepage_catalog:
+  url:   /:sf_culture/catalog
+  param: { module: main, action: catalog }
+  requirements:
+    sf_culture: (?:fr|en)
+
 homepage_localized:
   url:   /:sf_culture/
   param: { module: main, action: index }
