--- a/etc/www.daheardit-records.net/.env
+++ b/etc/www.daheardit-records.net/.env
@@ -12,5 +12,5 @@ FEEDBURNER_ENABLED=true
 RSYNC_SSH_PORT=22
 RSYNC_LOCAL_PATH=./src
 RSYNC_REMOTE_USER=daheardit-record
-RSYNC_REMOTE_HOST=ftp.pastis-hosting.net
+RSYNC_REMOTE_HOST=ssh.pastis-hosting.net
 RSYNC_REMOTE_PATH=/var/www/vhosts/daheardit-records.net/httpdocs/
