--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -49,7 +49,7 @@ spec:
   owner: constructions
   system: daheardit
   apiProvidedBy:
-    - ivresse-directus
+    - component:default/ivresse-directus
   definition: |
     openapi: "3.0.0"
     info:
